# Tauri-CSV-Reader

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: @colors.json  hashtagColors.json
src-tauri/document/: AI.csv  CrossPlatform.csv  Language.csv  Linux.csv  Ollama.csv  VisualStudioCode.csv
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
